--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet"> 
+    <meta name="description" content="World Ranks | Discover comprehensive information about every country worldwide with our intuitive web app. Explore details on geography, culture, economy, and more in one convenient platform. Start exploring today!"/>
+    <meta name="keywords" content="World Ranks, country, geography, continent, currency, region, area, un member, independent, state, capital, currency, neighbouring countries, languages, population, name, official name">
     <title>World Ranks</title>
   </head>
   <body>
